# qr-attendance

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml
src/: main.py  requirements.txt
