[project]
name = "qr_attendance"
version = "1.0.0"
dependencies = [
  "flet==0.84.0",
  "flet-camera",
  "opencv-python",
  "numpy"
]

[tool.flet]
org = "com.yourname"
product = "QR Attendance"
permissions = ["camera"]

[tool.flet.app]
path = "src"

[tool.flet.android]
package = "com.yourname.qrattendance"
