[project]
name = "qr_attendance"
version = "1.0.0"
dependencies = [
  "flet==0.84.0",
  "flet-camera",
  "opencv-python",
  "numpy",
  "openpyxl"
]

[tool.flet]
org = "com.yourname"
product = "QR Attendance"

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.CAMERA" = true
