[project]
name = "qr_attendance"
version = "1.0.0"
dependencies = [
  "flet==0.84.0",
  "flet-camera",
  "opencv-python",
  "numpy",
  "openpyxl"
]

[tool.flet]
org = "com.qr.attendance"
product = "QR Attendance"

[tool.flet.app]
path = "src"

[tool.flet.android]
package = "com.qr.attendance"

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
